--- a/mvp/package.json
+++ b/mvp/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tabler/icons-vue": "^3.9.0",
+    "howler": "^2.2.4",
+    "jspdf": "^2.5.1",
     "pinia": "^2.1.7",
     "sass": "^1.77.6",
     "vue": "^3.4.29"
